--- a/index.html
+++ b/index.html
@@ -127,87 +127,40 @@
 
             firebase.initializeApp(firebaseConfig);
             const database = firebase.database();
-            const timerRef = database.ref('timers');
-            const selectedRef = database.ref('selectedTimer');
+            const teamRef = database.ref('teams');
 
-            let intervals = {};
-
-            // ✅ Oplossing: Zorg dat selectTimer beschikbaar is
-            window.selectTimer = function(timerNumber) {
-                selectedRef.set(timerNumber);
+            // ✅ Oplossing: Zorg dat editTeamName beschikbaar is
+            window.editTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                display.style.display = "none";
+                input.style.display = "block";
+                input.value = display.textContent;
+                input.focus();
             };
 
-            selectedRef.on("value", snapshot => {
-                document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
-                if (snapshot.exists()) {
-                    document.querySelector(`#timerBox${snapshot.val()}`).classList.add("selected");
+            // ✅ Oplossing: Zorg dat saveTeamName beschikbaar is
+            window.saveTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                if (input.value.trim() !== "") {
+                    display.textContent = input.value;
+                    teamRef.child(`team${teamNumber}`).set(input.value);
                 }
-            });
-
-            // ✅ Oplossing: Zorg dat startTimer en stopTimer werken
-            window.startTimer = function() {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-
-                        if (intervals[timerKey]) {
-                            return;
-                        }
-
-                        intervals[timerKey] = setInterval(() => {
-                            timerRef.child(timerKey).get().then(timeSnap => {
-                                let time = timeSnap.exists() ? timeSnap.val() : 60;
-                                if (time > 0) {
-                                    time--;
-                                    timerRef.child(timerKey).set(time);
-                                } else {
-                                    clearInterval(intervals[timerKey]);
-                                    intervals[timerKey] = null;
-                                }
-                            });
-                        }, 1000);
-                    }
-                });
+                input.style.display = "none";
+                display.style.display = "block";
             };
 
-            window.stopTimer = function() {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        if (intervals[timerKey]) {
-                            clearInterval(intervals[timerKey]);
-                            intervals[timerKey] = null;
-                        }
-                    }
-                });
-            };
-
-            window.resetTimer = function() {
-                timerRef.set({
-                    timer1: 60, timer2: 60, timer3: 60, timer4: 60
-                });
-            };
-
-            // ✅ Oplossing: Zorg dat adjustTime beschikbaar is
-            window.adjustTime = function(amount) {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        timerRef.child(timerKey).get().then(timeSnap => {
-                            let time = timeSnap.exists() ? timeSnap.val() : 60;
-                            time += amount;
-                            if (time < 0) time = 0;
-                            timerRef.child(timerKey).set(time);
-                        });
-                    }
-                });
-            };
-
-            timerRef.on("value", snapshot => {
+            // ✅ Firebase luistert naar teamnaam-wijzigingen en past UI aan
+            teamRef.on("value", snapshot => {
                 if (snapshot.exists()) {
                     let data = snapshot.val();
                     Object.keys(data).forEach(key => {
-                        document.getElementById(key).textContent = data[key];
+                        let teamNumber = key.replace("team", "");
+                        let display = document.getElementById(`displayTeam${teamNumber}`);
+                        if (display) {
+                            display.textContent = data[key];
+                        }
                     });
                 }
             });
