--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                         nieuwNaamDiv.id = `team-name-${index}`;
                         nieuwNaamDiv.classList.add("team-name");
                         nieuwNaamDiv.textContent = teamNamen[index];
-                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
+                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
                         teamNaamEl.replaceWith(nieuwNaamDiv);
                     } else {
                         teamNaamEl.textContent = teamNamen[index];
+                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
                     }
 
                     document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
@@ -87,15 +88,19 @@
                 inputVeld.value = teamNamen[index];
                 inputVeld.classList.add("team-input");
 
+                // Vervang de huidige naam door het invoerveld
+                naamLabel.replaceWith(inputVeld);
+                inputVeld.focus();
+
+                // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
                 inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
+                
+                // Wanneer je op enter drukt, sla de nieuwe naam op
                 inputVeld.addEventListener("keydown", (event) => {
                     if (event.key === "Enter") {
                         slaNieuweTeamnaamOp(index, inputVeld.value);
                     }
                 });
-
-                naamLabel.replaceWith(inputVeld);
-                inputVeld.focus();
             }
 
             function slaNieuweTeamnaamOp(index, nieuweNaam) {
@@ -142,17 +147,18 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: wrap; /* Dit zorgt ervoor dat de timers zich netjes schalen op verschillende schermgroottes */
+            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
+            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
         }
         .timer {
-            width: 250px;
-            height: 250px;
+            width: 230px;  /* Kleinere breedte voor mobiele weergave */
+            height: 230px;  /* Kleinere hoogte voor mobiele weergave */
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 100px;
+            font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
             font-weight: bold;
             color: red;
             background-color: white;
@@ -203,18 +209,18 @@
         /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: column; /* Stapel timers verticaal op kleinere schermen */
+                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
             }
             .timer {
-                width: 90%;
-                height: 200px;
-                font-size: 50px;
+                width: 230px;  /* Kleinere breedte voor mobiele weergave */
+                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
+                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
             }
             .team-name {
-                font-size: 18px;
+                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
             }
             .controls {
-                width: 90%;
+                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
             }
             button {
                 font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
