--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
+            const firebaseConfig = {
+                apiKey: "YOUR_API_KEY",
+                authDomain: "YOUR_AUTH_DOMAIN",
+                databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com/",
+                projectId: "YOUR_PROJECT_ID",
+                storageBucket: "YOUR_STORAGE_BUCKET",
+                messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+                appId: "YOUR_APP_ID"
+            };
+
+            // Initialiseer Firebase
+            firebase.initializeApp(firebaseConfig);
+            const database = firebase.database();
+            const timersRef = database.ref("timers");
+            const timerStatusRef = database.ref("timerStatus");
+
             let timers = [60, 60, 60, 60];
-            let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
+            // Update de timerweergave
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
                     document.getElementById(`timer${index}`).textContent = tijd;
@@ -47,23 +65,35 @@
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
+                        syncTimer(); // Synchroniseer elke seconde
                     }
                 }, 1000);
+
+                timerStatusRef.set({
+                    running: true,
+                    selectedTimer: geselecteerdeTimer
+                });
             }
 
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
+                timerStatusRef.set({
+                    running: false,
+                    selectedTimer: geselecteerdeTimer
+                });
             }
 
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
+                syncTimer();
             }
 
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
+                syncTimer();
             }
 
             function toggleTimerZichtbaarheid() {
@@ -76,58 +106,76 @@
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
                     timers[geselecteerdeTimer] = invoerSeconden;
                     updateWeergave();
+                    syncTimer();
                 } else {
                     alert("Voer een geldig aantal seconden in (minimaal 0)");
                 }
             }
 
-            function maakTeamnaamBewerkbaar(index) {
-                let naamLabel = document.getElementById(`team-name-${index}`);
-                let inputVeld = document.createElement("input");
-                inputVeld.type = "text";
-                inputVeld.value = teamNamen[index];
-                inputVeld.classList.add("team-input");
+            function syncTimer() {
+                timersRef.set(timers);
+            }
 
-                // Vervang de huidige naam door het invoerveld
-                naamLabel.replaceWith(inputVeld);
-                inputVeld.focus();
+            function syncWithFirebase() {
+                timersRef.on("value", (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        timers = data;
+                        updateWeergave();
+                    }
+                });
 
-                // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
-                inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-                
-                // Wanneer je op enter drukt, sla de nieuwe naam op
-                inputVeld.addEventListener("keydown", (event) => {
-                    if (event.key === "Enter") {
-                        slaNieuweTeamnaamOp(index, inputVeld.value);
+                timerStatusRef.on("value", (snapshot) => {
+                    const data = snapshot.val();
+                    if (data && data.running !== undefined) {
+                        if (data.running && !intervals[data.selectedTimer]) {
+                            startTimer();
+                        } else if (!data.running && intervals[data.selectedTimer]) {
+                            stopTimer();
+                        }
                     }
                 });
             }
 
-            function slaNieuweTeamnaamOp(index, nieuweNaam) {
-                if (nieuweNaam.trim() !== "") {
-                    teamNamen[index] = nieuweNaam;
-                }
-                updateWeergave();
-            }
-
-            // Event listeners voor timer en knoppen
+            // Timerknoppen en event listeners
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
-            });
-
-            document.getElementById("timerSelect").addEventListener("change", (event) => {
-                selecteerTimer(parseInt(event.target.value));
             });
 
             document.getElementById("startBtn").addEventListener("click", startTimer);
             document.getElementById("stopBtn").addEventListener("click", stopTimer);
             document.getElementById("resetBtn").addEventListener("click", resetTimer);
             document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
-            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
 
             document.querySelectorAll(".adjust-time").forEach(button => {
                 button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
             });
+
+            syncWithFirebase(); // Start de synchronisatie
+
+            // Andere timer gerelateerde functies
+            function selecteerTimer(index) {
+                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+                geselecteerdeTimer = index;
+                document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById("timerSelect").value = index;
+            }
+
+            function toggleTimerZichtbaarheid() {
+                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+                updateWeergave();
+            }
+
+            function stelAangepasteTijdIn() {
+                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
+                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
+                    timers[geselecteerdeTimer] = invoerSeconden;
+                    updateWeergave();
+                    syncTimer();
+                } else {
+                    alert("Voer een geldig aantal seconden in (minimaal 0)");
+                }
+            }
 
             selecteerTimer(0);
             updateWeergave();
@@ -147,8 +195,8 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
+            flex-wrap: nowrap;
+            overflow-x: auto;
         }
         .timer {
             width: 230px;  /* Kleinere breedte voor mobiele weergave */
@@ -158,7 +206,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px; /* Kleinere tekstgrootte voor mobiele weergave */
+            font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
             font-weight: bold;
             color: red;
             background-color: white;
@@ -184,7 +232,7 @@
             flex-direction: column;
             align-items: center;
             gap: 10px;
-            margin-top: 60px;
+            margin-top: 40px;
         }
         .row {
             display: flex;
@@ -199,8 +247,8 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
+            width: auto;
+            max-width: 120px;
         }
         .selected {
             border: 6px solid red;
@@ -249,12 +297,13 @@
         </div>
     </div>
 
-    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
             <button id="stopBtn">Stop</button>
             <button id="resetBtn">Reset</button>
+        </div>
+        <div class="row">
             <button class="adjust-time" data-amount="10">+10 sec</button>
             <button class="adjust-time" data-amount="20">+20 sec</button>
             <button class="adjust-time" data-amount="30">+30 sec</button>
@@ -276,3 +325,4 @@
     </div>
 </body>
 </html>
+
